# projeto-menu-logoff

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  session-menu.desktop
app/: main.py
docs/: arch.obsidia.md  arquitetura.md  prompt.md
docs/menu-logoff/.obsidian/: workspace.json
docs/menu-logoff/appdocs/: Acoes de Sessao.md  Aplicacao GTK Principal.md  Ativos Graficos.md  Build System.md  Configuracao do Projeto.md  Descricoes Contextuais.md  Empacotamento Debian.md  Estilizacao CSS.md  Gerenciador de Tema.md  Interface de Sessao.md  Menu Logoff.md  Renderizacao Cairo.md  Sistema de Icones.md
scripts/: build-deb.sh  build.sh  main.spec  setup-system.sh
