[project]
name = "menu-logoff"
version = "1.0.4"
description = "Custom power menu for Zorin OS with macOS-inspired aesthetics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dyego Alves", email = "dyegoalves@example.com"}
]
keywords = ["gtk", "menu", "power-management", "zorin-os"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

# Dependências principais
dependencies = [
    "pygobject>=3.46.0",
    "pyinstaller>=6.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=61.0", "wheel", "pyinstaller>=6.0"]
build-backend = "setuptools.build_meta"

# Configurações do PyInstaller
[tool.pyinstaller]
entrypoint = "app/main.py"
name = "menu-logoff"
onefile = true
console = false
noconfirm = true

# Incluir assets (ícones)
datas = [
    "app/assets/icons/*.png:assets/icons",
]

# Hidden imports específicos para gi/Gtk
hiddenimports = [
    "gi",
    "gi.repository.Gtk",
    "gi.repository.Gdk",
    "gi.repository.GLib",
    "gi.repository.GdkPixbuf",
    "gi.repository.cairo",
    "gi.overrides.Gtk",
    "gi.overrides.Gdk",
    "gi.overrides.GLib",
    "cairo",
]
